feat: 完善书架功能，拆分阅读进度与书架关联